# CoAP-Protocol

./: .clang-format  .clang-tidy  CMakeLists.txt  README.md
include/: messages.hpp
src/: main.cpp  messages.cpp
